--- a/atom-proje/frontend/css/still.css
+++ b/atom-proje/frontend/css/still.css
@@ -31,6 +31,17 @@ h3{
     h3{
         font-size: 35px!important;
     }
+    h1{
+        font-size: 35px;
+    }
+}
+@media screen and (max-width:768px) {
+    h3{
+        font-size: 28px!important;
+    }
+    h1{
+        font-size: 30px!important;
+    }
 }
 
 @media screen and (max-width:767px) {
@@ -254,6 +265,9 @@ header .hamburger i{
     .banner header.sticky{
         height: 80px!important;
     }
+    header.sticky{
+        height: 80px!important;
+    }
     
 }
 @media screen and (max-width:767px) {
@@ -279,7 +293,7 @@ header.sticky{
     position: fixed;
     padding: 0 25px;
     opacity: 1;
-    height: 100px!important;
+    height: 100px;
     width: 100%;
     background-color: var(--main-b);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
@@ -1235,9 +1249,11 @@ header .banner-social a:last-child{
     #howItSlider{
         display: block!important;
     }
-    .how-it-works h3{
+    .how-it-works .left-side h3{
+        margin-bottom: 100px;
         font-size: 25px!important;
     }
+    
 }
 
 
@@ -1869,6 +1885,9 @@ header .banner-social a:last-child{
     .why-us .box-section{
         margin-top: 50px;
     }
+    .image-content-section{
+        padding: 15px;
+    }
     
 }
 @media screen and (max-width:768px) {
@@ -2323,12 +2342,12 @@ header .banner-social a:last-child{
     .ourServicesSlide h1{
         font-size: 35px;
     }
-    .ourServices{
+    /* .ourServices{
         display: none;
     }
     .ourServicesSlide{
         display: block;
-    }
+    } */
     .our-services .box-item{
         height: 500px;
         width: 300px!important;
@@ -2393,12 +2412,12 @@ header .banner-social a:last-child{
     .ourServicesSlide h1{
         font-size: 35px;
     }
-    .ourServices{
+    /* .ourServices{
         display: none;
     }
     .ourServicesSlide{
         display: block;
-    }
+    } */
     .our-services .box-item {
         height: 500px;
         width: 300px!important;
