--- a/atom-proje/frontend/css/still.css
+++ b/atom-proje/frontend/css/still.css
@@ -1747,6 +1747,12 @@ header .banner-social a:last-child{
         margin-right: 15px;
     }
 }
+@media screen and (max-width:767px) {
+    .services-popup .close-popup{
+        margin-top: 30px;
+        margin-right: 50px;
+    }
+}
  
 .breadcrumb{
     display: flex;
@@ -1806,6 +1812,13 @@ header .banner-social a:last-child{
     .title{
         margin-bottom: 75px;
     }
+    
+}
+@media screen and (max-width:767px) {
+    .breadcrumb span:last-child{
+        margin-left: 0;
+    }
+
 }
 
 
@@ -2319,6 +2332,7 @@ header .banner-social a:last-child{
     z-index: 100;
     padding: 15px;
 }
+
 .visible-content .btn-style-2,
 .visible-content-2 .btn-style-2{
     color:  #fff;
@@ -2344,6 +2358,12 @@ header .banner-social a:last-child{
     display: none;
 }
 
+.our-services .box-item .btn-style-3{
+    position: absolute;
+    bottom: 35px;
+    justify-content: flex-start!important;
+    padding-left: 20px;
+}
 @media screen and (max-width:1200px) {
     .ourServicesSlide h1{
         font-size: 35px;
@@ -2371,7 +2391,11 @@ header .banner-social a:last-child{
         height: 250px;
         object-fit: cover;
     }
+    .our-services .box-item .btn-style-3{
+        bottom: 25px;
+    }
 }
+
 @media screen and (max-width:768px) {
     .ourServicesSlide h1{
         font-size: 30px;
@@ -2384,6 +2408,21 @@ header .banner-social a:last-child{
         font-size:25px!important;
         text-align: center;
         margin-bottom: 30px;
+
+    }
+    .ourServices h1{
+        margin-left: 30px;
+    }
+    .our-services .box-item .btn-style-3{
+        bottom: 10px!important;
+        height: 45px;
+        width: 70%;
+    }
+    .our-services .box-item{
+        margin-bottom: 43px!important;
+    }
+    #ourServiceGroup .box-item .btn-style-3{
+        bottom: 25px;
     }
     
 }
@@ -2441,6 +2480,7 @@ header .banner-social a:last-child{
         height: 250px;
         object-fit: cover;
     }
+    
 }
 
 @media screen and (max-width:768px) {
@@ -2453,6 +2493,10 @@ header .banner-social a:last-child{
     }
     .visible-content-2 a,.visible-content a{
         font-size: 15px;
+    }
+    #ourServiceGroup .box-item .btn-style-3{
+        bottom: 14px;
+        height: 45px;
     }
     
 }
